# magnetobot

./: main.py  pyproject.toml
magnetobot/: main.py
