[tool.poetry]
name = "magnetobot"
version = "0.1.0"
description = "A terminal-based LLM Bot with various tools"
authors = ["Siddhesh Agarwal <siddhesh.agarwal@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.scripts]
magnetobot = "main:app"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.1"
typer = {extras = ["all"], version = "^0.12.3"}
magentic = "^0.23.0"
wikipedia = "^1.4.0"
ujson = "^5.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
